# shortify

./: README.md
api_test/: add_links.sh  get_links.sh
client/: README.md  package.json
client/src/: root.tsx
client/src/api/: index.ts
client/src/components/: Form.tsx
client/src/routes/: [...404].tsx  index.tsx
server/: Cargo.toml  README.md
server/src/: lib.rs  main.rs  model.rs
