[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
rand = "0.8.5"
mongodb = "2"
serde = { version = "1", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.8"
